# memery

./: .gitignore  00_core.ipynb  01_download_memes.ipynb  01_loader.ipynb  02_crafter.ipynb  02_folder.ipynb  03_encoder.ipynb  03_fileutils.ipynb  04_indexer.ipynb  04_nn_trees.ipynb  05_milvus.ipynb  05_ranker.ipynb  06_fileutils.ipynb  06_pipeline.ipynb  07_cli.ipynb  08_gui.ipynb  08_jupyter_gui.ipynb  09_streamlit_app.ipynb  =7.0.0  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  TODO.md  Untitled.ipynb  Untitled2.ipynb  _jina_test.ipynb  _scratchpad.ipynb  _visualize.ipynb  _working_pipeline.ipynb  app.ipynb  index-Copy1.ipynb  index.ipynb  jina-backend.py  jina-frontened.py  memery.ann  memery.pt  pyan-grouped-alt.dot  (+11 more)
.streamlit/: config.toml
2fe54f46-a5b6-446b-b082-bc1053c7bf9a/: dataset.zip.REMOVED.git-id
docs/: Autokill.html  Check History in Memory.html  Clear Output.html  Disable Stdin.html  Empty Cell.html  Factorials.html  HelloWorld 2.html  HelloWorld.html  Inline Image.html  Interrupt-IPY6.html  Interrupt.html  JupyterWidgets.html  Other Comms.html  Parallel Execute A.html  Parallel Execute B.html  SVG.html  Skip Exceptions with Cell Tags-IPY6.html  Skip Exceptions with Cell Tags.html  Skip Exceptions-IPY6.html  Skip Exceptions.html  Sleep One.html  Sleep1s.html  Unicode.html  UnicodePy3.html  Untitled.html  Untitled1.html  Untitled2.html  Widget_List.html  _config.yml  app.html  attachment.html  cli.html  config  core.html  crafter.html  download_memes.html  empty.html  encoder.html  fileutils.html  gui.html  (+39 more)
images/: memery.ann  (+2 more)
(+43 files in other folders)
